--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="175dp"
     android:background="#000"
     >
     <android.support.v7.widget.CardView
@@ -28,29 +28,15 @@
                 android:textSize="18sp"
                 tools:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/loc-txt"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/des-txt"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:clickable="true"
-                android:text="Location Here !"
-                android:textColor="#000"
-                android:textSize="16sp"
-                tools:ignore="HardcodedText,KeyboardInaccessibleWidget" />
 
             <TextView
                 android:id="@+id/price-txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignEnd="@+id/comp-btn"
-                android:layout_below="@+id/loc-txt"
 
-                android:layout_marginEnd="140dp"
-                android:layout_marginTop="-8dp"
+                android:layout_marginEnd="190dp"
+                android:layout_marginTop="90dp"
                 android:text="price Here !"
                 android:textColor="#000"
                 android:textSize="24sp"
