--- a/app/src/main/res/layout/row_delivery.xml
+++ b/app/src/main/res/layout/row_delivery.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     android:background="#ffffff"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <android.support.v7.widget.CardView
         android:layout_margin="12dp"
         android:background="@drawable/card_back"
@@ -13,13 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/relative"
             android:layout_width="match_parent"
-            android:layout_height="180dp">
+            android:layout_height="180dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/des-txt"
+                android:id="@+id/desTxtDelivery"
                 android:layout_width="200dp"
                 android:layout_height="90sp"
                 android:layout_marginStart="5dp"
@@ -28,55 +28,52 @@
                 android:textSize="18sp"
                 tools:ignore="HardcodedText" />
 
-            <TextView
-                android:id="@+id/loc-txt"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/des-txt"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:clickable="true"
-                android:text="Location Here !"
-                android:textColor="#000"
-                android:textSize="16sp"
-                tools:ignore="HardcodedText,KeyboardInaccessibleWidget" />
 
             <TextView
-                android:layout_centerHorizontal="true"
-                android:id="@+id/price-txt"
+                android:id="@+id/priceTxtDelivery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/loc-txt"
-                android:layout_marginEnd="180dp"
-                android:layout_marginTop="-8dp"
                 android:text="price Here !"
                 android:textColor="#000"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText,KeyboardInaccessibleWidget" />
 
-
-
-            <Button
-
-                android:layout_alignBottom="@+id/price-txt"
-                android:id="@+id/del-btn"
-                android:layout_width="100dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="45dp"
-                android:layout_marginBottom="-10dp"
-                android:layout_toEndOf="@+id/des-txt"
-                android:text="Delete"
-                android:textAllCaps="false"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/order-btn_Delivery"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="-10dp"
+                    android:layout_marginStart="24dp"
+                    android:text="order"
+                    android:textAllCaps="false"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
+                <Button
+                    android:id="@+id/location-btn_Delivery"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="-10dp"
+                    android:layout_marginStart="70dp"
+                    android:text="get location"
+                    android:textAllCaps="false"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
+
+            </LinearLayout>
 
 
 
-        </RelativeLayout>
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
-</RelativeLayout>
+</LinearLayout>
