--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,64 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <EditText
-        android:inputType="textEmailAddress"
-        android:id="@+id/cust-mail-edit"
-        android:hint="e-mail"
+    android:orientation="vertical"
+    android:background="@drawable/photoo">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/relative"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
-    <EditText
-        android:id="@+id/cust-user-edit"
-        android:hint="username"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
-    <EditText
-        android:inputType="textPassword"
-        android:id="@+id/cust-pass-edit"
-        android:hint="pass"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
-    <EditText
-        android:inputType="number"
-        android:id="@+id/cust-phone-edit"
-        android:hint="phone"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
-    <EditText
-        android:id="@+id/cust-address-edit"
-        android:hint="address"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
-    <EditText
-        android:inputType="number"
-        android:id="@+id/cust-idNum-edit"
-        android:hint="id number"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="match_parent"
+        android:background="@drawable/photoo"
+        >
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/profile_img"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/images"
+            app:civ_border_color="#4CAE50"
+            app:civ_border_width="4dp" />
 
-<Button
-android:onClick="Sign_up"
-    android:id="@+id/cust-btn-sign"
-    android:text="sign"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_first"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal">
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/relative_first"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingStart="5dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:hint="E-Mail"
+                        tools:ignore="HardcodedText,RtlSymmetry"
+                        android:inputType="textEmailAddress"
+                        android:id="@+id/sign-email-edt"/>
+                </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_marginTop="5dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingStart="5dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:hint="User Name"
+                        tools:ignore="HardcodedText,RtlSymmetry"
+                        android:id="@+id/sign-user-edt"/>
+                </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_marginTop="5dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingStart="5dp"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:hint="Password"
+                        tools:ignore="HardcodedText,RtlSymmetry"
+                        android:inputType="textPassword"
+                        android:id="@+id/sign-pass-edt"/>
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:layout_marginTop="25dp"
+            android:id="@+id/card_second"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/relative_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/sign-phone_edit"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:elevation="5dp"
+                        android:hint="Phone"
+                        android:inputType="phone"
+                        android:paddingStart="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
+                        android:textColor="#000"
+                        tools:ignore="Autofill,HardcodedText,RtlSymmetry"
+                        />
+                </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/sign-idcard_edt"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:elevation="5dp"
+                        android:hint="ID Card"
+                        android:inputType="phone"
+                        android:paddingStart="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
+                        android:textColor="#000"
+                        tools:ignore="Autofill,HardcodedText,RtlSymmetry"/>
+                </android.support.design.widget.TextInputLayout>
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/sign-address-edt"
+                        android:layout_width="300dp"
+                        android:layout_height="40dp"
+                        android:elevation="5dp"
+                        android:hint="Address"
+                        android:inputType="text"
+                        android:paddingStart="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
+                        android:textColor="#000"
+                        tools:ignore="Autofill,HardcodedText,RtlSymmetry" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <LinearLayout
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <RadioGroup
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:id="@+id/radio-group"
+                android:layout_width="300dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center_horizontal"
+                tools:ignore="UselessParent">
+                <RadioButton
+                    android:layout_marginEnd="30dp"
+                    android:id="@+id/rdb-male"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Male"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    android:textColor="#F7F7F7"
+                    tools:ignore="HardcodedText" />
+                <RadioButton
+                    android:id="@+id/rdb-female"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="female"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    android:textColor="#FFFFFF"
+                    tools:ignore="HardcodedText" />
+            </RadioGroup>
+        </LinearLayout>
+        <Button
+            android:id="@+id/SignUp_btn"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:background="@drawable/card_back"
+            android:fontFamily="sans-serif-medium"
+            android:text="create account"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#FFF"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="15dp"
+            tools:ignore="HardcodedText" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+            <LinearLayout
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_marginStart="25dp"
+                    android:id="@+id/txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Already have an account ? "
+                    android:textColor="#F1F1F1"
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
 
+                <TextView
+                    android:id="@+id/signin-txt"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sign In Now !"
+                    android:textColor="#28572B"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
+                    tools:ignore="HardcodedText" />
+            </LinearLayout>
+        </RelativeLayout>
 
+    </LinearLayout>
+</ScrollView>
 
-
-
-
-
-
-
-
-
-
-
-
-</LinearLayout>
