--- a/app/src/main/res/layout/row_delivery.xml
+++ b/app/src/main/res/layout/row_delivery.xml
@@ -56,7 +56,7 @@
                     android:textStyle="bold"
                     tools:ignore="HardcodedText" />
                 <Button
-                    android:id="@+id/location-btn_Delivery"
+                    android:id="@+id/locationBtnDelivery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="-10dp"
@@ -65,7 +65,8 @@
                     android:textAllCaps="false"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    tools:ignore="HardcodedText" />
+                    tools:ignore="HardcodedText"
+                    />
 
             </LinearLayout>
 
