--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
             android:layout_height="75dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:background="#929292"
+            android:background="@drawable/logo"
             tools:ignore="ContentDescription" />
 
         <TextView
