--- a/app/src/main/res/layout/activity_recycler_delivery.xml
+++ b/app/src/main/res/layout/activity_recycler_delivery.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Recycler">
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_delivery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recycler_delivery">
+        android:layout_height="match_parent" />
 
-
-
-    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
