--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,9 +16,11 @@
         android:background="@drawable/photoo"
         >
         <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:id="@+id/profile_img"
             android:layout_width="96dp"
+            android:onClick="uploadProfile"
             android:layout_height="96dp"
             android:layout_marginTop="15dp"
             android:scaleType="centerCrop"
@@ -227,7 +229,6 @@
                     android:textColor="#28572B"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="20dp"
                     tools:ignore="HardcodedText" />
             </LinearLayout>
         </RelativeLayout>
