--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="175dp"
+    android:layout_height="170dp"
     android:background="#000"
     >
     <android.support.v7.widget.CardView
@@ -11,13 +11,12 @@
         android:background="@drawable/card_back"
         android:id="@+id/card-row"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:id="@+id/relative"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <TextView
                 android:id="@+id/des-txt"
                 android:layout_width="200dp"
@@ -28,13 +27,11 @@
                 android:textSize="18sp"
                 tools:ignore="HardcodedText" />
 
-
             <TextView
                 android:id="@+id/price-txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/comp-btn"
-
+                android:layout_alignEnd="@+id/done-btn"
                 android:layout_marginEnd="190dp"
                 android:layout_marginTop="90dp"
                 android:text="price Here !"
@@ -44,7 +41,7 @@
                 tools:ignore="HardcodedText,KeyboardInaccessibleWidget" />
 
             <Button
-                android:id="@+id/edt-btn"
+                android:id="@+id/edtbtn"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
@@ -57,10 +54,10 @@
                 tools:ignore="HardcodedText" />
 
             <Button
-                android:id="@+id/del-btn"
+                android:id="@+id/delBtn"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/edt-btn"
+                android:layout_below="@+id/edtbtn"
                 android:layout_marginStart="45dp"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/des-txt"
@@ -71,12 +68,11 @@
                 tools:ignore="HardcodedText" />
 
             <Button
-                android:id="@+id/comp-btn"
+                android:id="@+id/done-btn"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/del-btn"
                 android:layout_marginStart="45dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="90dp"
                 android:layout_toEndOf="@+id/des-txt"
                 android:text="done"
                 android:textSize="20sp"
