--- a/app/src/main/res/layout/row_delivery.xml
+++ b/app/src/main/res/layout/row_delivery.xml
@@ -1,80 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="#ffffff"
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <android.support.v7.widget.CardView
-        android:layout_margin="12dp"
-        android:background="@drawable/card_back"
-        android:id="@+id/card-row"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:paddingTop="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:layout_height="200dp">
 
-        <LinearLayout
-            android:id="@+id/relative"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:orientation="vertical">
+    <ImageView
+        android:id="@+id/order-back"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/item_back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription,MissingConstraints" />
 
-            <TextView
-                android:id="@+id/desTxtDelivery"
-                android:layout_width="200dp"
-                android:layout_height="90sp"
-                android:layout_marginStart="5dp"
-                android:text="Description Here !"
-                android:textColor="#000"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText" />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#8A000000"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/order-back" />
+    <Button
+        android:id="@+id/btn-info"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/btn_follow_style"
+        android:text="Order Info"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded" />
 
+    <ImageView
+        android:id="@+id/details-back"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/black_gradient"
+        tools:ignore="ContentDescription" />
 
-            <TextView
-                android:id="@+id/priceTxtDelivery"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="price Here !"
-                android:textColor="#000"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                tools:ignore="HardcodedText,KeyboardInaccessibleWidget" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/cust-img"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/school"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:ignore="MissingConstraints,RtlHardcoded" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    <TextView
+        android:id="@+id/cust-name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="32dp"
+        android:text="Karim El Sayed"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/cust-img"
+        app:layout_constraintTop_toTopOf="@+id/cust-img"
+        tools:ignore="HardcodedText,RtlHardcoded" />
 
-                <Button
-                    android:id="@+id/order-btn_Delivery"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="-10dp"
-                    android:layout_marginStart="24dp"
-                    android:text="order"
-                    android:textAllCaps="false"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    tools:ignore="HardcodedText" />
-                <Button
-                    android:id="@+id/locationBtnDelivery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="-10dp"
-                    android:layout_marginStart="70dp"
-                    android:text="get location"
-                    android:textAllCaps="false"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    tools:ignore="HardcodedText"
-                    />
+    <TextView
+        android:id="@+id/cust-rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="4.5 Star"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/cust-img"
+        app:layout_constraintTop_toBottomOf="@+id/cust-name"
+        tools:ignore="HardcodedText,RtlHardcoded" />
 
-            </LinearLayout>
+    <TextView
+        android:id="@+id/desc-txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:textStyle="bold"
 
-
-
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+        app:layout_constraintStart_toStartOf="@+id/order-back"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
+</android.support.constraint.ConstraintLayout>
